# Studies

./: .gitignore  README.md
DataScience/: README.md
FastAPI/1_proj/: pyproject.toml
FastAPI/1_proj/1_proj/: main.py
FastAPI/3_proj/: pyproject.toml  teste.py
FastAPI/3_proj/proj/: main.py  manage.py
FastAPI/3_proj/proj/api/v1/: api.py
FastAPI/3_proj/proj/api/v1/endpoints/: course.py
FastAPI/3_proj/proj/core/: config.py  data_base.py  dependecies.py
FastAPI/3_proj/proj/models/: course_model.py
FastAPI/3_proj/proj/schemas/: course_schema.py
FastAPI/3_proj/tests/: test_main.py
FastAPI/Course_API/: manage.py  pyproject.toml  teste.py
FastAPI/Course_API/course_api/: create_tables.py  main.py
FastAPI/Course_API/course_api/api/v1/: api.py
FastAPI/Course_API/course_api/api/v1/endpoints/: course.py
FastAPI/Course_API/course_api/core/: config.py  database.py  dependencies.py
FastAPI/Course_API/course_api/models/: __all_models.py  course_model.py
FastAPI/Course_API/tests/: tests_courses.py
FastAPI/school/: manage.py  pyproject.toml
FastAPI/school/school/: create_tables.py  main.py
FastAPI/school/school/api/v1/: api.py
FastAPI/school/school/api/v1/routers/: article.py  user.py
FastAPI/school/school/core/: auth.py  configs.py  database.py  dependencies.py  security.py
FastAPI/school/school/models/: __all_models.py  article_model.py  user_model.py
FastAPI/school/school/schemas/: article_schema.py  user_schema.py
Hadoop/: hadoop.md
SQL/: sql_data_definition_language.md  sql_data_manipulation_language.md  sql_datasheet.md
apache_kafka/: clusters.md  commands.md  docker-compose.yaml  kafka.md  mensageria.md  particionamento.md
apache_spark/: application_1.py  application_2.py  application_3.py  dataframes_2.ipynb  diy.ipynb  diy_2.ipynb  diy_3.py  diy_4.ipynb  docker-compose.yaml  pipelines.ipynb  spark.md  spark_cache_persistence.ipynb  spark_databases.ipynb  spark_ml.ipynb  spark_ml_2.ipynb  spark_partition.ipynb  spark_sql.ipynb  spark_streaming.py  spark_streaming_2.py  spark_to_pandas.ipynb
css/: background-image-ex.html  background-image.html  bar-nav-horizontal.html  bordas.html  box-model.html  cascade-inheritance.html  colors-fonts.html  contact.html  css.md  custom-fonts.html  div-span.html  float-elements-ex-2.html  float-elements-ex.html  float-elements.html  float_elements_clear.html  index.html  inheritance-specificity.html  margin-padding.html  measure.html  more-selectors-ex.html  more-selectors.html  overflow.html  page-markup.html  positioning-ex.html  positioning.html  products.html  pseudo-classes-elements-ex.html  pseudo-classes-elements.html  styles-alignments.html  vertical_nav_ex.html  z-index-ex.html  z-index.html
data_warehouse/: data_warehouse.md  dim_tables.md  dimensional_modeling.md  fact_tables.md
databases/: databases.md
docker/: docker.md  (+5 more)
fullstack/courses_platform/courses_api/: docker-compose.yaml  pyproject.toml
fullstack/courses_platform/courses_api/accounts/: models.py  serializers.py  urls.py  views.py
fullstack/courses_platform/courses_api/accounts/migrations/: 0001_initial.py
fullstack/courses_platform/courses_api/core/: settings.py  urls.py
fullstack/courses_platform/courses_api/core/utils/: custom_exceptions.py  exceptions.py  formatters.py  renderers.py
fullstack/courses_platform/courses_api/courses/: filters.py  models.py  serializers.py  urls.py  views.py
rust/api/: Cargo.toml
rust/api/src/: main.rs
rust/axum_example/: Cargo.toml
rust/axum_example/src/: main.rs
rust/database/: Cargo.toml  docker-compose.yaml
rust/database/migration/: Cargo.toml
rust/database/migration/src/: lib.rs  m20260116_182417_create_books.rs
rust/database/src/: lib.rs  main.rs
rust/database/src/config/: mod.rs
rust/database/src/db/: mod.rs
rust/database/src/models/: book.rs  mod.rs
rust/database/src/repository/: mod.rs  user_repository.rs
rust/database/src/state/: mod.rs
(+790 files in other folders)
