[tool.poetry]
name = "3-proj"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "3_proj"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
psycopg2-binary = "^2.9.5"
sqlalchemy = "^1.4.44"
asyncpg = "^0.27.0"
uvicorn = "^0.20.0"
httpx = "^0.23.1"
pytest = "^7.2.0"

[tool.pytest.ini_options]
pythonpath = [
  ".", "./proj"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
