[tool.poetry]
name = "course-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "course_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
psycopg2-binary = "^2.9.5"
asyncpg = "^0.27.0"
sqlmodel = "^0.0.8"
uvicorn = "^0.20.0"
pytest = "^7.2.0"
httpx = "^0.23.1"

[tool.pytest.ini_options]
pythonpath = [
  ".", "./course_api"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
