[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "1.0", features = ["sqlx-postgres", "macros"] }
dotenvy = "0.15"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"

[dependencies.sea-orm-migration]
version = "1"
features = ["runtime-tokio-native-tls", "sqlx-postgres"]
